Fix compile issues when building project in AndroidStudio1.0.2 Also add AndroidASync and Apache commons io libraries into project

--- a/app/res/values-et/strings.xml
+++ b/app/res/values-et/strings.xml
@@ -208,7 +208,7 @@
     <string name="errorResultNetworkError">Puudub võrguühendus kõnetuvastusserveriga. Kas
 		võrguühendus on sisse lülitatud?</string>
 
-    // SpeechRecognizer error messages (9) shown in the IME
+    <!-- SpeechRecognizer error messages (9) shown in the IME -->
     <string name="errorImeResultAudioError">VIGA: lindistamine luhtus</string>
     <string name="errorImeResultNetworkError">VIGA: netiühendus puudub</string>
     <string name="errorImeResultNetworkTimeoutError">VIGA: server ei tööta</string>
